[metadata]
name = audfactory
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
home-page = https://gitlab.audeering.com/tools/audfactory
description = Communicate with Artifactory
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = artifactory
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Researcher
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer>=1.0.0
    dohq-artifactory>=0.7.377
    xmltodict
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --cov=audfactory
    --cov-report term-missing
    --cov-fail-under=100
    --doctest-plus
    --flake8
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
